# axtra

./: .gitignore  CHANGELOG.md  README.md
axtra/: Cargo.toml
axtra/src/: lib.rs
axtra/src/errors/: mod.rs  notifiers.rs  response.rs
axtra/src/notifier/: event.rs  manager.rs  mod.rs  traits.rs
axtra/src/notifier/providers/: cmdline.rs  discord.rs  mod.rs  ntfy.rs  slack.rs
axtra_macros/: Cargo.toml
