[package]
name = "axtra"
version = "0.3.2"
edition = "2024"
description = "Axtra is a Rust library for building web applications with Axum and Astro providing utilities for error handling, notifications, and more."
repository = "https://github.com/imothee-io/axtra"
license = "MIT"
keywords = ["axum", "astro", "web", "notifications", "errors"]
readme = "../README.md"

[dependencies]
Inflector = "0.11.4"
axum = "0.8.9"
http = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "time"] }
thiserror = "2.0.18"
time = "0.3.47"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = [
  "compression-gzip",
  "fs",
  "trace",
] }
tracing = "0.1.41"
ts-rs = "11.0.0"
validator = "0.20.0"
axtra_macros = { version = "0.3.0", path = "../axtra_macros" }

[features]
bouncer = ["dep:dashmap"]
notifier = ["dep:reqwest", "dep:serde_json", "dep:futures"]
notify-error-slack = ["notifier"]
notify-error-discord = ["notifier"]
notify-error-ntfy = ["notifier"]
notify-error-cmdline = ["notifier"]
tls-rustls = ["sqlx/tls-rustls"]
tls-native-tls = ["sqlx/tls-native-tls"]

[dependencies.dashmap]
version = "6.1.0"
optional = true

[dependencies.reqwest]
version = "0.12"
optional = true
default-features = false
features = ["json", "rustls-tls"]

[dependencies.serde_json]
version = "1.0.117"
optional = true

[dependencies.futures]
version = "0.3"
optional = true
